few fixes to run in yarn mode